test/tests/errors/error-if-exp-ref-off.sm
// true
// false
// false
/**/
/**/

program {
    const x: int = true ? ref "" : ref 1;
}